--- a/lab1/src/main/resources/templates/bookingConfirmation.html
+++ b/lab1/src/main/resources/templates/bookingConfirmation.html
@@ -2,48 +2,39 @@
 <head>
     <meta charset="utf-8">
     <title>Booking - Confirmation</title>
-    <style type="text/css">
-        body {
-            width: 800px;
-            margin: auto;
-        }
-        table {
-            width:100%;
-        }
-        table, td, th {
-            border: 1px solid black;
-            padding: 3px 2px;
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-<section>
-    <header>
-        <h1>Event Booking page - Booking confirmation </h1>
+<section class="container mt-5">
+    <header class="mb-4">
+        <h1 class="text-center">Event Booking Page - Booking Confirmation</h1>
     </header>
-    <table>
+    <table class="table table-bordered table-hover">
+        <thead class="table-dark">
         <tr>
-            <th colspan="2">
-                Your Booking Status
-            </th>
+            <th colspan="2" class="text-center">Your Booking Status</th>
         </tr>
+        </thead>
+        <tbody>
         <tr>
-            <td><b>Attendee Name </b></td>
+            <td><b>Attendee Name</b></td>
             <td>Stefan Toskovski</td>
         </tr>
         <tr>
             <td><b>Client IP Address</b></td>
-            <td th:text="${ipAddress}"></td>
+            <td th:text="@{${clientIpAddr}}">192.168.0.1</td>
         </tr>
         <tr>
             <td><b>Booking for Event</b></td>
-            <td th:text="${eventName}"></td>
+            <td th:text="${event.getName()}">Tech Conference 2024</td>
         </tr>
         <tr>
-            <td><b>Number of tickets</b></td>
-            <td th:text="${numTickets}"></td>
+            <td><b>Number of Tickets</b></td>
+            <td th:text="${numTickets}">2</td>
         </tr>
+        </tbody>
     </table>
 </section>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGFssY3f4vG9a5hoEy59Q3uEnBA2sKf65R+XU8dKw1j7" crossorigin="anonymous"></script>
 </body>
 </html>
