--- a/lab1/src/main/resources/templates/listEvents.html
+++ b/lab1/src/main/resources/templates/listEvents.html
@@ -2,43 +2,85 @@
 <head>
   <meta charset="utf-8">
   <title>Event Booking page - Welcome and choose an Event</title>
-  <style>
-    body {
-      width: 800px;
-      margin: auto;
-    }
-  </style>
+
+  <link href="../static/listEvents.css" rel="stylesheet">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 </head>
 <body>
-<header>
-  <h1>Welcome to our Event Booking App</h1>
-</header>
-<main>
-  <form action="/search" method="GET">
-    <label>
-      Contains:
-      <input type="text" name="searchText">
-    </label>
-    <label>
-      Rating:
-      <input type="number" name="searchRating">
-    </label>
-    <button type="submit">Search</button>
-  </form>
-  <h2>Choose an event:</h2>
-  <form action="/eventBooking" method="POST">
-    <div id="events" th:each="event : ${events}">
-      <input type="radio"
-             th:name="selectedEvent"
-             th:value="${event.getName()}"
-             th:text="'Name: ' + ${event.getName()} + ', Description: ' + ${event.getDescription()} + ', Rating: ' + ${event.getPopularityScore()}"/>
-    </div>
 
-    <h2>Choose number of tickets:</h2>
-    <input type="number" name="numTickets" min="1" max="10" placeholder="1" required><br/>
-    <br/>
-    <input type="submit" value="Submit">
-  </form>
+<main class="container-fluid bg-light" >
+
+
+  <div id="top-search" class="container justify-content-center">
+    <h1 class="">Welcome to our Event Booking App</h1>
+    <form action="/search" method="GET">
+      <label>
+        Contains(Event):
+        <input type="text" name="eventText">
+      </label>
+      <label>
+        Rating:
+        <input type="number" name="rating">
+      </label>
+      <label>
+        Contains(Location):
+        <input type="text" name="locationText">
+      </label>
+      <button type="submit">Search</button>
+    </form>
+  </div>
+
+  <div id="event-cont" class="container d-flex">
+    <div class="row w-100">
+      <div class="col-md-8 bg-transparent">
+        <h2>Choose an event:</h2>
+        <form action="/eventBooking" method="POST">
+          <div id="events" th:each="event : ${events}" class="d-flex align-items-center mb-3">
+
+            <div class="me-3 flex-grow-1">
+              <input type="radio"
+                     th:name="eventId"
+                     th:value="${event.getId()}"
+                     th:text="'Name: ' + ${event.getName()} + ', Description: '
+             + ${event.getDescription()} + ', Rating: ' + ${event.getPopularityScore()}
+             + ' Location: ' + ${event.getLocation().getName()}" required/>
+            </div>
+
+            <div class="d-flex align-items-center">
+              <a th:href="@{/events/edit-form/{id}(id=${event.getId()})}" class="btn btn-outline-primary btn-sm me-2">Edit</a>
+              <a th:href="@{/events/delete/{eventId}(eventId=${event.getId()})}" class="btn btn-outline-danger btn-sm">Delete</a>
+              <a th:href="@{/events/edit-review/{eventId}(eventId=${event.getId()})}" class="btn btn-outline-success btn-sm">Add Review</a>
+            </div>
+          </div>
+
+          <div class="row w-100 d-flex align-items-center">
+            <div class="col me-4">
+              <h2>Choose number of tickets:</h2>
+              <input type="number" name="numTickets" min="1" max="10" placeholder="1" required><br/><br/>
+              <input type="submit" value="Submit">
+            </div>
+
+            <div class="col-auto me-5">
+              <a th:href="@{/events/add-form}" class="btn btn-primary btn-sm">Add</a>
+            </div>
+          </div>
+        </form>
+
+
+      </div>
+
+      <div id="status-text" class="col-md-4 d-flex align-items-start bg-light p-3 border rounded">
+
+        <p class="text-uppercase text-primary" th:text="@{${status}}">Status updates will appear here.</p>
+        <p class="text-danger" th:text="@{${error}}"></p>
+      </div>
+    </div>
+  </div>
+
+
+
 
 </main>
 </body>
